--- a/editor_base/pubspec.yaml
+++ b/editor_base/pubspec.yaml
@@ -30,8 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cupertino_desktop_kit: ^0.0.9
-
+  flutter_cupertino_desktop_kit: ">= 0.0.1 < 999.0.0"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
